--- a/index.html
+++ b/index.html
@@ -5,8 +5,75 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projects-02</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Projects-02</h1>
+  <section class="hero">
+    <header></header>
+    <div class="hero_content">
+      <div class="col-6 right">
+        <h1>Welcome to</h1>
+        <h1><span>Photography</span> World</h1>
+        <p>These photography quotes offer insights into the minds of photography greats, from how they see the world and approach the art of making a photo, to their views on cameras, to ideas on how to improve ones photography skills.</p>
+        <a href="#" type="button" class="link_button">Hire me</a>
+      </div>
+      <div class="col-6 left">
+        <img src="images/Photo-01.png" alt="">
+      </div>
+    </div>
+  </section>
+
+  <!-- Second Section -->
+  <section class="second_section">
+    <div class="second_content">
+      <div class="col-4 first">
+        <h1>Web Design</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro deleniti assumenda magnam suscipit consequuntur nobis excepturi tempore facere culpa at velit, similique blanditiis voluptas est soluta dolor inventore ad ea!</p>
+        <a href="#" class="link_button"> Read More...</a>
+      </div>
+      <div class="col-4 second">
+         <h1>Graphics Design</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro deleniti assumenda magnam suscipit consequuntur nobis excepturi tempore facere culpa at velit, similique blanditiis voluptas est soluta dolor inventore ad ea!</p>
+        <a href="#" class="link_button"> Read More...</a>
+      </div>
+      <div class="col-4 third">
+         <h1>Web Developer</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro deleniti assumenda magnam suscipit consequuntur nobis excepturi tempore facere culpa at velit, similique blanditiis voluptas est soluta dolor inventore ad ea!</p>
+        <a href="#" class="link_button"> Read More...</a>
+      </div>
+    </div>
+  </section>
+
+  <section class="hero">
+    <header></header>
+    <div class="hero_content">
+      <div class="col-6 left">
+        <img src="images/Tri-01-phto.png" alt="">
+      </div>
+      <div class="col-6 right">
+        <h1>Welcome to</h1>
+        <h1><span>MB SHAHIN</span> World</h1>
+        <p>These photography quotes offer insights into the minds of photography greats, from how they see the world and approach the art of making a photo, to their views on cameras, to ideas on how to improve ones photography skills.</p>
+        <a href="#" type="button" class="link_button">Hire me</a>
+      </div>      
+    </div>
+  </section>
+
+  <section class="fourth_section">
+    <h1>Graphics Design</h1>
+    <div class="fourth_content">
+      <div class="col-6">
+        <h1>Photography</h1>
+        <p>These photography quotes offer insights into the minds of photography greats, from how they see the world and approach the art of making a photo, to their views on cameras, to ideas on how to improve ones photography skills.</p>
+        <a href="#" type="button" class="link_button">Hire me</a>
+      </div>
+
+      <div class="col-6">
+        <h1>Cinematography</h1>
+        <p>These photography quotes offer insights into the minds of photography greats, from how they see the world and approach the art of making a photo, to their views on cameras, to ideas on how to improve ones photography skills.</p>
+        <a href="#" type="button" class="link_button">Hire me</a>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
